--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Zoe Rand
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "index"
   Current Projects:
     - Movement rates of Antarctic blue whales: "https://zoer27.github.io/currentprojects/ABWmove"
     - Fetal sex ratios of baleen whales: "https://zoer27.github.io/currentprojects/FSR"
@@ -38,7 +38,7 @@ paginate_path: "/blog/page:num/"
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.JPEG"
+avatar: "/assets/img/avatar-icon.jpeg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
