--- a/_config.yml
+++ b/_config.yml
@@ -145,10 +145,10 @@ text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 navbar-col: "#3587A4" 
-navbar-text-col: "#404040"
+navbar-text-col: "#F5FBFF"
 navbar-border-col: "#DDDDDD"
 footer-col: "#3587A4"
-footer-text-col: "#777777"
+footer-text-col: "#F5FBFF"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
 
