--- a/_config.yml
+++ b/_config.yml
@@ -144,10 +144,10 @@ page-col: "#C1DFF0"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#3587A4" 
+navbar-col: "#496641" 
 navbar-text-col: "#F5FBFF"
 navbar-border-col: "#DDDDDD"
-footer-col: "#3587A4"
+footer-col: "#496641"
 footer-text-col: "#F5FBFF"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
